[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Fonts/ActionButton.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/AdventureDescFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/AdventureInterface.gd" type="Script" id=4]
[ext_resource path="res://Scenes/UX/ItemMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/SpriteArt/GameTempground.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Story/MasterStoryNode.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Story/Sandwich.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Story/DefaultNode.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Story/Die.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Animations/SceneEnter.tres" type="Animation" id=11]
[ext_resource path="res://Scripts/TextLog.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="AdventureInterface" type="Node2D"]
script = ExtResource( 4 )

[node name="EnterScene" type="AnimationPlayer" parent="."]
autoplay = "Entering Scene"
"anims/Entering Scene" = ExtResource( 11 )

[node name="ChoicesPanel" type="Panel" parent="."]
margin_top = 728.0
margin_right = 1600.0
margin_bottom = 936.002
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdventureActions" type="HBoxContainer" parent="ChoicesPanel"]
margin_left = 16.0
margin_top = 8.0
margin_right = 1576.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackContainer" type="MarginContainer" parent="ChoicesPanel/AdventureActions" groups=[
"DefaultChoiceButtons",
]]
visible = false
margin_right = 387.0
margin_bottom = 139.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackBut" type="Button" parent="ChoicesPanel/AdventureActions/AttackContainer"]
modulate = Color( 1, 0.196078, 0.0509804, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 377.0
margin_bottom = 129.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
custom_constants/hseparation = 9
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvestigateContainer" type="MarginContainer" parent="ChoicesPanel/AdventureActions" groups=[
"DefaultChoiceButtons",
]]
visible = false
margin_right = 517.0
margin_bottom = 139.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="InvestigateBut" type="Button" parent="ChoicesPanel/AdventureActions/InvestigateContainer"]
modulate = Color( 1, 0.945098, 0.694118, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 507.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 1 )
custom_constants/hseparation = 9
text = "Investigate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsContainer" type="MarginContainer" parent="ChoicesPanel/AdventureActions" groups=[
"DefaultChoiceButtons",
]]
visible = false
margin_right = 778.0
margin_bottom = 139.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ItemsBut" type="Button" parent="ChoicesPanel/AdventureActions/ItemsContainer"]
modulate = Color( 1, 0.741176, 0.407843, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 768.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 1 )
custom_constants/hseparation = 9
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestContainer" type="MarginContainer" parent="ChoicesPanel/AdventureActions" groups=[
"DefaultChoiceButtons",
]]
visible = false
margin_right = 1560.0
margin_bottom = 139.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RestBut" type="Button" parent="ChoicesPanel/AdventureActions/RestContainer"]
modulate = Color( 0.592157, 0.886275, 1, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 1550.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 1 )
custom_constants/hseparation = 9
text = "Rest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueContainer" type="MarginContainer" parent="ChoicesPanel/AdventureActions" groups=[
"DefaultChoiceButtons",
]]
margin_right = 1560.0
margin_bottom = 139.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ContinueBut" type="Button" parent="ChoicesPanel/AdventureActions/ContinueContainer"]
modulate = Color( 0.929412, 0.741176, 0.278431, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 1550.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 1 )
custom_constants/hseparation = 9
text = "C o n t i n u e"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPanel" type="Panel" parent="."]
self_modulate = Color( 0.992157, 0.819608, 0.223529, 0.380392 )
margin_right = 1600.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextPanel"]
margin_right = 1600.0
margin_bottom = 184.0
custom_constants/margin_right = 5
custom_constants/margin_top = 15
custom_constants/margin_left = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLog" type="RichTextLabel" parent="TextPanel/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1595.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
visible_characters = 79
percent_visible = 0.538462
scroll_following = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="WindowDialog" parent="."]
modulate = Color( 0.996078, 0.796078, 0.560784, 0.564706 )
margin_left = 815.0
margin_top = 271.0
margin_right = 1542.0
margin_bottom = 643.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemMenu" parent="Items" instance=ExtResource( 5 )]
position = Vector2( -33.1489, -8.59418 )
script = null

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 1, 0.905882, 0.905882, 1 )
position = Vector2( -118.148, 4.54413 )
scale = Vector2( 1.29537, 0.772434 )
texture = ExtResource( 6 )
centered = false
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerAvatar" type="Node" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlayerAvatar"]
frames = SubResource( 1 )

[node name="MasterStoryNode" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Sandwich\?" type="Node" parent="MasterStoryNode"]
script = ExtResource( 8 )

[node name="Choice of Bread" type="Node" parent="MasterStoryNode/Sandwich\?"]

[node name="Italian" type="Node" parent="MasterStoryNode/Sandwich\?/Choice of Bread"]

[node name="WholeWheat" type="Node" parent="MasterStoryNode/Sandwich\?/Choice of Bread"]

[node name="Anything to Drink\?" type="Node" parent="MasterStoryNode/Sandwich\?"]

[node name="Water" type="Node" parent="MasterStoryNode/Sandwich\?/Anything to Drink\?"]

[node name="Soda" type="Node" parent="MasterStoryNode/Sandwich\?/Anything to Drink\?"]

[node name="Die" type="Node" parent="MasterStoryNode"]
script = ExtResource( 10 )

[node name="DefaultNode" type="Node" parent="MasterStoryNode"]
script = ExtResource( 9 )
[connection signal="animation_finished" from="EnterScene" to="MasterStoryNode" method="introAnimationOver"]
[connection signal="pressed" from="ChoicesPanel/AdventureActions/AttackContainer/AttackBut" to="." method="attack"]
[connection signal="pressed" from="ChoicesPanel/AdventureActions/ItemsContainer/ItemsBut" to="." method="itemsPressed"]
[connection signal="pressed" from="ChoicesPanel/AdventureActions/ContinueContainer/ContinueBut" to="TextPanel/MarginContainer/TextLog" method="continuePressed"]
